array.island.Island.scala.error
Erreur de compilation :
Island:4: error: value unary_! is not a member of Int
                                   {if (!num(i)==0)&&(num(i)-num(i-1)>0) 
                                        ^Island:4: error: not found: value &&
                                   {if (!num(i)==0)&&(num(i)-num(i-1)>0) 
                                                   ^